--- a/reviews-module/package.json
+++ b/reviews-module/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "build-dev": "webpack -d --watch",
-    "start-dev": "nodemon server/index.js",
-    "seed_database": "node database/seed.js"
+    "build": "webpack -d --watch",
+    "start": "nodemon server/index.js",
+    "seed": "node database/seed.js"
   },
   "repository": {
     "type": "git",
