--- a/logistics-module/package.json
+++ b/logistics-module/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "start": "nodemon server/index.js",
     "build": "webpack -d --watch",
-    "db:setup": "node database/seed.js",
+    "seed": "node database/seed.js",
     "test": "jest"
   },
   "dependencies": {
