--- a/suggested-apps-module/package.json
+++ b/suggested-apps-module/package.json
@@ -11,7 +11,7 @@
   "scripts": {
     "build": "webpack -d --watch",
     "start": "nodemon server/index.js",
-    "db:setup": "node db/seed.js",
+    "seed": "node db/seed.js",
     "test": "jest --coverage",
     "test:watch": "npm run test -- --watch"
   },
