--- a/reviews-module/package.json
+++ b/reviews-module/package.json
@@ -13,7 +13,7 @@
     "type": "git",
     "url": "git+https://github.com/FEC-Group-Link/review-component.git"
   },
-  "author": "",
+  "author": "Jon Baltz",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/FEC-Group-Link/review-component/issues"
