--- a/suggested-apps-module/package.json
+++ b/suggested-apps-module/package.json
@@ -10,7 +10,7 @@
   },
   "scripts": {
     "build": "webpack -d --watch",
-    "start": "nodemon server/index.js",
+    "start": "node server/index.js",
     "seed": "node db/seed.js",
     "test": "jest --coverage",
     "test:watch": "npm run test -- --watch"
